# terminal

./: Cargo.toml  README.md  build.rs  config.example.toml
.github/workflows/: ci.yml  release.yml
resources/: app.manifest  make_icon.py
src/: crash.rs  main.rs  perf.rs
src/app/: mod.rs  settings.rs  shell_integration.rs  ssh_picker.rs  tailscale.rs  window_state.rs
src/config/: mod.rs
src/image/: iterm2.rs  mod.rs  osc52.rs  sixel.rs
src/keys/: mod.rs
src/log/: mod.rs
src/pty/: conpty.rs  mod.rs  ssh.rs  ssh_config.rs
src/render/: mod.rs
src/terminal/: cell.rs  grid.rs  handler.rs  mod.rs  parser.rs  selection.rs
src/url/: mod.rs
