[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Foundation_Numerics",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_Controls_Dialogs",
] }
unicode-width = "0.2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
regex = "1"

[build-dependencies]
embed-resource = "2"
