[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Foundation_Numerics",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_Controls_Dialogs",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_UI_Input_Ime",
] }
unicode-width = "0.2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
regex = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
base64 = "0.22"
chrono = "0.4"
tokio = { version = "1", features = ["rt", "sync", "macros", "net", "io-util", "time"] }
russh = "0.45"
russh-keys = "0.45"
async-trait = "0.1"

[build-dependencies]
embed-resource = "2"
